﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 2.023001, see misc/*.deps* for details
 - runtime: -16 (recommends: +18)

 [Packaging]
 - Moved a boatload of hard required deps that were really mostly recommendations to where they belong.

2.023001 2015-01-13T12:12:42Z 9c13379
 [Bugfix]
 - Stop injecting TravisCI in newly minted dists ( superceded by bundle changes )

 [Dependencies::Stats]
 - Dependencies changed since 2.023000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: ↑2
 - runtime: ↑3
 - test: (recommends: ↑1)

2.023000 2015-01-13T08:13:40Z 8d47bcc
 [API]
 - Missing constructor arguments are now only warnings
 - Now does :PluginRemover and :Config::Slicer plugin bundle roles.
 - Inject TravisCI plugin standard.

 [Dependencies::Stats]
 - Dependencies changed since 2.022005, see misc/*.deps* for details
 - develop: ↑18 (recommends: ↑1)
 - runtime: +3 ↑21 -2
 - test: ↑2 (recommends: ↑1)

 [Internals]
 - No more MX::AttributeShortcuts
 - No more StrictConstructor

2.022005 2015-01-05T20:16:46Z cba7b74
 [Dependencies::Stats]
 - Dependencies changed since 2.022004, see misc/*.deps* for details
 - develop: +1 ↑18 -1
 - runtime: +1 ↑21 -1
 - test: ↑2

 [Minor]
 - Switch to Readme::Brief

2.022004 2015-01-02T03:00:30Z 07c5593
 [Dependencies::Stats]
 - Dependencies changed since 2.022003, see misc/*.deps* for details
 - develop: +1 ↑1
 - runtime: ↑4
 - test: +1

 [Minor]
 - use new travis generator
 - inject new travis generator into new dists
 - inject vim syntax stanza into new dists

2.022003 2014-12-29T11:33:17Z c7a0caa
 [Dependencies::Stats]
 - Dependencies changed since 2.022002, see misc/*.deps* for details
 - develop: +1 ↑22 (recommends: ↑1)
 - runtime: +1 ↑26
 - test: ↑1 (recommends: ↑1)

 [Minor]
 - Switch to Pod2Readme for shipped readme because I much prefer how it renders

2.022002 2014-12-14T09:15:08Z ed0dd28
 [Dependencies::Stats]