@@ -1,6 +1,9 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 2.023002
+ [Added / develop requires]
+ - Dist::Zilla::Plugin::Prereqs::Upgrade 0.001000
+
  [Added / runtime recommends]
  - Dist::Zilla::Plugin::Bootstrap::lib 1.001000
  - Dist::Zilla::Plugin::PerlTidy 0.19
@@ -20,6 +23,19 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Test::Pod 1.48
  - Test::Pod::Coverage 1.10
  - namespace::autoclean 0.23
+
+ [Added / runtime requires]
+ - Dist::Zilla::Plugin::Prereqs::Upgrade 0.001000
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 7.05_07 → 7.00
+
+ [Changed / develop recommends]
+ - Test::More 1.301001_097 → 0.99
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 7.05_07 → 7.00
+ - Test::More 1.301001_097 → 0.99
 
  [Removed / runtime requires]
  - Dist::Zilla::Plugin::Bootstrap::lib 1.001000
