@@ -21,6 +21,13 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
  - Test::Pod::Coverage 1.10
  - namespace::autoclean 0.23
 
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 7.05_07 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 7.05_07 → 7.00
+ - Test::More 1.301001_097 → 0.99
+
 2.023001 2015-01-13T12:12:42Z
  [Changed / configure recommends]
  - ExtUtils::MakeMaker 7.04 → 7.05_07
